15949
I don't know if I caused this or someone else, but you can't see files in the current directory anymore.  It's not a classpath issue, because . works for everything but the empty package.
{code}
// a.scala
class A

package xx {
  class B
}


% scalac29 a.scala 
% scala29
Welcome to Scala version 2.9.0.r24213-b20110206233447 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_22).
Type in expressions to have them evaluated.
Type :help for more information.

scala> new A
<console>:8: error: not found: type A
       new A
           ^

scala> new xx.B
res1: xx.B = xx.B@5c4e9b7d
